<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="1">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="497dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/infoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.03"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/main_info"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="1">


                <LinearLayout
                    android:layout_gravity="center"
                    android:paddingTop="10dp"
                    android:weightSum="1">

                    <ImageView
                        android:id="@+id/user"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:paddingBottom="7dp"
                        android:paddingTop="7dp"
                        app:srcCompat="@drawable/user" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/fullNameEdit"
                            android:layout_width="183dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="20dp"
                            android:ems="10"
                            android:hint="@string/name_hint"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:theme="@style/AppTheme" />

                        <TextView
                            android:id="@+id/hintText"
                            android:layout_width="194dp"
                            android:layout_height="21dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="20dp"
                            android:text="@string/name_label"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="13dp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_gravity="center"
                    android:paddingTop="10dp"
                    android:weightSum="1">

                    <ImageView
                        android:id="@+id/phoneImage"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:paddingBottom="7dp"
                        android:paddingTop="7dp"
                        app:srcCompat="@drawable/ic_phone_icon" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/phoneNumberEdit"
                            android:layout_width="183dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="20dp"
                            android:ems="10"
                            android:hint="@string/number_hint"
                            android:inputType="phone"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:theme="@style/AppTheme" />

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="194dp"
                            android:layout_height="21dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="20dp"
                            android:text="@string/number_label"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="13dp" />
                    </LinearLayout>
                </LinearLayout>
            </GridLayout>



            <TextView
                android:id="@+id/socialNetworksText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.03"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:text="@string/social"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:columnCount="1"
                android:layout_marginBottom="30dp"
                android:paddingBottom="10dp">

                <LinearLayout
                    android:layout_gravity="center"
                    android:weightSum="1">

                    <ImageView
                        android:id="@+id/facebookImage"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_weight="0.10"
                        android:paddingBottom="12dp"
                        android:paddingTop="10dp"
                        app:srcCompat="@drawable/fb_logo_small" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:orientation="vertical">


                        <EditText
                            android:id="@+id/facebookEdit"
                            android:layout_width="183dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="20dp"
                            android:ems="10"
                            android:hint="@string/face_login_hint"
                            android:inputType="text"
                            android:text=""
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:theme="@style/AppTheme" />

                        <TextView
                            android:id="@+id/fb_login_text"
                            android:layout_width="194dp"
                            android:layout_height="21dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="20dp"
                            android:text="@string/face_label"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="13dp" />


                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp">

                    <ImageView
                        android:id="@+id/instaImage"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:paddingBottom="10dp"

                        android:paddingTop="10dp"
                        app:srcCompat="@drawable/insta_logo_small" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:orientation="vertical">


                        <EditText
                            android:id="@+id/instaEdit"
                            android:layout_width="183dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="20dp"
                            android:ems="10"
                            android:hint="@string/insta_login_hint"
                            android:inputType="text"
                            android:text=""
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:theme="@style/AppTheme" />

                        <TextView
                            android:id="@+id/insta_login_text"
                            android:layout_width="194dp"
                            android:layout_height="21dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="20dp"
                            android:text="@string/insta_label"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="13dp" />


                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp">

                    <ImageView
                        android:id="@+id/vkImage"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        app:srcCompat="@drawable/vk_logo_small" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:orientation="vertical"
                        android:weightSum="1">


                        <EditText
                            android:id="@+id/vkEdit"
                            android:layout_width="183dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="20dp"
                            android:ems="10"
                            android:hint="@string/vk_login_hint"
                            android:inputType="text"
                            android:text=""
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:theme="@style/AppTheme" />

                        <TextView
                            android:id="@+id/vk_login_text"
                            android:layout_width="194dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="20dp"
                            android:text="@string/vk_label"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="13dp" />

                    </LinearLayout>
                </LinearLayout>


            </GridLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/saveEditDataButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1.0"
            android:background="@color/black"
            android:text="@string/save_button"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/shareToActivityButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1.0"
            android:background="@color/black"
            android:text="@string/share_button"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/receiveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1.0"
            android:background="@color/black"
            android:text="@string/get_button"
            android:textColor="@color/white" />
    </LinearLayout>


</LinearLayout>